src/objects/Resources__c.object
<CustomObject>
    <fields>
        <fullName>Contact_No__c</fullName>
        <label>Contact No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <label>Current Status</label>
        <picklist>
            <picklistValues>
                <fullName>Free</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Allocated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reserved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EmpID__c</fullName>
        <label>EmpID</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OverAll_Experience__c</fullName>
        <label>OverAll Experience</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Practice_Joining_Date__c</fullName>
        <label>Practice Joining Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resource_Name__c</fullName>
        <label>Resource Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Experience__c</fullName>
        <label>Salesforce Experience</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>searchtext__c</fullName>
        <label>searchtext</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Resources</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RNum-{0000}</displayFormat>
        <label>Resource Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>